# captive-portal

./: Dockerfile  Pipfile  README.md  pyproject.toml  test.py
CaptivePortal/FreeRadiusDictionary/: dictionary
CaptivePortal/cpAPI/: apps.py  models.py  permissions.py  urls.py  utils.py  views.py
CaptivePortal/src/: settings.py  urls.py
CaptivePortal/templates/: base.html  datetime.html
CaptivePortal/templates/rest_framework/: base.html  datetime.html
